--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .navbar-design {
   @apply hover:bg-gradient-to-l hover:to-[#04376b] hover:via-[#04659d] hover:from-[#0484d3] px-3 h-[35px] rounded-full hover:transition-transform duration-500 hover:ease-in-out flex items-center justify-center;
 }
@@ -25,4 +35,29 @@
   cursor: pointer;
   border: none;
   box-shadow: 0 0 10px rgba(59, 130, 246, 0.5);
+}
+
+.animated-border {
+  position: relative;
+  overflow: hidden;
+}
+
+.animated-border::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(120deg, transparent, rgba(1, 124, 194, 0.5), transparent);
+  animation: animate-border 4s linear infinite;
+}
+
+@keyframes animate-border {
+  0% {
+    left: -100%;
+  }
+  100% {
+    left: 100%;
+  }
 }
